[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Rooms/Scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/white.png" type="Texture" id=2]
[ext_resource path="res://Assets/hazard.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Prefabs/Gate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/purple.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=3]
0/name = "white.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "hazard.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -24, 0 )
b = Vector2( 24, 0 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )
MOVE_SPEED = 150
GRAVITY = 500.0
ACCEL = 40
JUMP = -200

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 128, 128 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -196616, 0, 0, -262137, 0, 0, -131080, 0, 0, -196601, 0, 0, -65544, 0, 0, -131065, 0, 0, -8, 0, 0, -65529, 0, 0, 65528, 0, 0, 7, 0, 0, 131064, 0, 0, 65543, 0, 0, 196600, 0, 0, 131078, -1610612736, 0, 131079, -1610612736, 0, 262136, 0, 0, 196614, -1610612736, 0, 196615, 0, 0, 327672, 0, 0, 262150, -1610612736, 0, 262151, 0, 0, 393208, 0, 0, 327686, -1610612736, 0, 327687, 0, 0, 458744, 0, 0, 458748, 1, 0, 458749, -1610612735, 0, 458750, -1610612735, 0, 458751, -1610612735, 0, 393216, -1610612735, 0, 393217, -1610612735, 0, 393218, -1610612735, 0, 393219, -1610612735, 0, 393220, -1610612735, 0, 393221, -1610612735, 0, 393222, -1610612736, 0, 393223, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, -1610612736, 0, 524286, -1610612736, 0, 524287, -1610612736, 0, 458752, -1610612736, 0, 458753, -1610612736, 0, 458754, -1610612736, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0 )

[node name="Portal1" type="Area2D" parent="TileMap"]
editor/display_folded = true
visible = false
position = Vector2( -8, 112 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Portal1"]
position = Vector2( 0, 16 )
shape = SubResource( 4 )

[node name="Portal2" type="Area2D" parent="TileMap"]
editor/display_folded = true
visible = false
position = Vector2( 112, 24 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Portal2"]
position = Vector2( 3.05176e-005, 16 )
shape = SubResource( 4 )

[node name="Gate" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( -120, -88 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 32, 224 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 5 )
[connection signal="body_entered" from="TileMap/Portal1" to="." method="_on_Portal1_body_entered"]
[connection signal="body_entered" from="TileMap/Portal2" to="." method="_on_Portal2_body_entered"]
